--- a/app/src/main/res/layout/row_pokemon_list.xml
+++ b/app/src/main/res/layout/row_pokemon_list.xml
@@ -3,13 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="7dp">
+    android:layout_margin="9dp"
+    android:background="@drawable/pokemon_row_style">
 
     <ImageView
         android:id="@+id/imagemPokemon"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
