--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
     tools:context=".presentation.SplashActivity">
 
     <ImageView
-        android:id="@+id/imagemInicial"
+        android:id="@+id/splashImage"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="40dp"
@@ -23,7 +23,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:layout_constraintTop_toBottomOf="@id/imagemInicial"
+        app:layout_constraintTop_toBottomOf="@id/splashImage"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
