--- a/app/src/main/res/layout/row_dialog_fragment.xml
+++ b/app/src/main/res/layout/row_dialog_fragment.xml
@@ -7,32 +7,32 @@
     tools:context=".presentation.fragment.PokemonDialogFragment">
 
     <ImageView
-        android:id="@+id/imagemPokemon"
+        android:id="@+id/pokemonImage"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@id/textDescricao"
+        app:layout_constraintBottom_toTopOf="@id/textDescription"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/layoutNumeroNome"
+        app:layout_constraintRight_toLeftOf="@id/numberAndNameLayout"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
-        android:id="@+id/layoutNumeroNome"
+        android:id="@+id/numberAndNameLayout"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/textDescricao"
-        app:layout_constraintLeft_toRightOf="@id/imagemPokemon"
+        app:layout_constraintBottom_toTopOf="@id/textDescription"
+        app:layout_constraintLeft_toRightOf="@id/pokemonImage"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textNumeroPokemon"
+            android:id="@+id/textPokemonNumber"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -41,7 +41,7 @@
             android:textSize="40sp" />
 
         <TextView
-            android:id="@+id/textNomePokemon"
+            android:id="@+id/textPokemonName"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_gravity="center"
@@ -51,29 +51,29 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textTipo1"
+        android:id="@+id/textType1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toTopOf="@id/textDescricao"
+        app:layout_constraintBottom_toTopOf="@id/textDescription"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/textTipo2"
-        app:layout_constraintTop_toBottomOf="@id/imagemPokemon" />
+        app:layout_constraintRight_toLeftOf="@id/textType2"
+        app:layout_constraintTop_toBottomOf="@id/pokemonImage" />
 
     <TextView
-        android:id="@+id/textTipo2"
+        android:id="@+id/textType2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toTopOf="@id/textDescricao"
-        app:layout_constraintLeft_toRightOf="@id/textTipo1"
+        app:layout_constraintBottom_toTopOf="@id/textDescription"
+        app:layout_constraintLeft_toRightOf="@id/textType1"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imagemPokemon" />
+        app:layout_constraintTop_toBottomOf="@id/pokemonImage" />
 
     <TextView
-        android:id="@+id/textDescricao"
+        android:id="@+id/textDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -82,6 +82,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textTipo1" />
+        app:layout_constraintTop_toBottomOf="@id/textType1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
