--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -23,29 +23,29 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/spinnerOpcoes"/>
+            app:layout_constraintRight_toLeftOf="@id/spinnerOptions"/>
 
         <Spinner
-            android:id="@+id/spinnerOpcoes"
+            android:id="@+id/spinnerOptions"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/editTextBuscar"
+            app:layout_constraintRight_toLeftOf="@id/editTextSearch"
             app:layout_constraintLeft_toRightOf="@id/iconPokedex"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
         <EditText
-            android:id="@+id/editTextBuscar"
+            android:id="@+id/editTextSearch"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/buttonBuscar"
-            app:layout_constraintLeft_toRightOf="@id/spinnerOpcoes"
+            app:layout_constraintRight_toLeftOf="@id/buttonSearch"
+            app:layout_constraintLeft_toRightOf="@id/spinnerOptions"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
         <ImageButton
-            android:id="@+id/buttonBuscar"
+            android:id="@+id/buttonSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="15dp"
